# Ray-Tracer

./: .gitignore  CMakeLists.txt  build.ps1  camera.h  color.h  hittable.h  imgui.ini  main.cpp  main.h  material.h  sphere.h  vcpkg.json  wpng.h
src/: main.cpp
